fixes spacing between project images

--- a/style.css
+++ b/style.css
@@ -443,7 +443,7 @@ section .title::after{
 .box{
     display: inline-block;
     width: 800px;
-    height: 400px;
+    height: 450px;
     background-color:rgb(221,213,197);
 }
 
